# balls

./: Cargo.toml
config/: log4rs.yaml
src/: advance.rs  ball.rs  collision.rs  main.rs  render.rs  render_old.rs  simulation.rs  wall.rs  world_gen.rs
src/collision/: collidable.rs  colliders.rs  collision.rs  mod.rs  solvers.rs
src/render/: mod.rs
src/render/shaders/: ball_blend.frag  ball_blur.frag  ball_blur.vert
