[package]
name = "balls"
version = "0.1.0"
authors = ["Shahar Papini <spiritusp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
features = ['gfx']

[dependencies.legion]
git="https://github.com/amethyst/legion"
branch="master"

[dependencies.nalgebra]
[dependencies.rand]
[dependencies.fnv]
[dependencies.rand_pcg]
[dependencies.maybe-owned]

[dependencies]
priority-queue = ">=1.1.1"
ordered-float = ">=2.1.1"
rayon = ">=1.5.0"
log = ">=0.4.14"
log4rs = ">=1.0.0"